--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "accessing-array-values.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/ritikrajdev/codeacademy-javascripting/issues"
   },
-  "homepage": "https://github.com/ritikrajdev/codeacademy-javascripting#readme"
+  "homepage": "https://github.com/ritikrajdev/codeacademy-javascripting#readme",
+  "devDependencies": {
+    "jest": "^29.3.1"
+  }
 }
