chore: add & use eslint to format files

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ritikrajdev/codeacademy-javascripting#readme",
   "devDependencies": {
+    "eslint": "^8.32.0",
     "jest": "^29.3.1"
   },
   "dependencies": {
